--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.3",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^7.5.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
